Mon Jul 22 08:04:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Rtems_init.c:
        * ace/Atomic_Op_Sparc.c:
          With Intel C++ don't define the static variable, result in a
          warning that it is not used

Mon Jul 22 06:34:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.{h,cpp,inl}:
          Changed wchar_maxbytes_ to a size_t to resolve warnings with BCB2007
          and removed the return value of get_version/set_version, they just
          always do a return 0 which isn't usefull

        * ace/SPIPE_Stream.inl:
          Directly use the local variables

Sat Jul 21 06:26:30 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/fuzz.pl:

          Disable check_for_exception_spec for now. This test will be reenabled and
          the remaining usage of exception sepcifications will be zapped once the
          beta is out.

Sat Jul 21 00:48:31 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.cpp (subscribe_i): Removed duplicate IPv4
          code.

Fri Jul 20 21:32:48 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/MEM_Acceptor.cpp (accept): Use the sockaddr_in whose address was
          taken to set ACE_INET_Addr; don't cast back and forth from sockaddr.

        * ace/Sock_Connect.cpp (get_bcast_addr): No need to cast a pointer
          simply to pass it to ACE_OS::memcpy(). Avoids a possible unaligned
          access warning.

        * ace/SOCK_Dgram.inl (recv): Use sockaddr.sa_family to get the
          address type; same field as sockaddr_in.sin_family and avoids
          unaligned access warnings from HP aC++.

Fri Jul 20 18:15:27 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * NEWS:

          Added entries for the ACE_Vector::swap() fix and Microsoft PSDK
          64-bit compiler support.

Fri Jul 20 14:44:40 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * contrib/FaCE/FaCE.mpc:
